--- a/my-site/html_css_miniproject.html
+++ b/my-site/html_css_miniproject.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" href="miniproject.css">
 	<link rel="stylesheet" href="miniproject.js">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-		integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
-		crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
+	<script>
+		// 스크롤 시 헤더, 네비게이션 변경
+	</script>
 	<header class="header">
 		<div class="header-container">
 			<a href="http://127.0.0.1:5500/my-site/html_css_miniproject.html" class="logo">
@@ -22,8 +25,8 @@
 			</div>
 		</div>
 	</header>
-	<section class="banner" style="background-image: 
-			url(https://hypershop.online/uploads/header/ddingtycoon.png);
+	<section class="banner" style="background-image:
+			url(https://github.com/godtojang/25.10.20-react/blob/main/anif.png?raw=true);
 			background-size: cover; background-position: center;">
 		<div class="banner-container">
 			<div class="banner-content">
@@ -51,57 +54,97 @@
 			<div class="products">
 				<div class="card">
 					<div class="cardimg">
-						<img src="../my-site/images/dotori.png" alt="도토리 5000개">
+						<img src="../my-site/images/5000do.png" alt="도토리 5000개">
 					</div>
 					<h3 class="card-title">도토리 5,000개</h3>
 					<p class="card-price">5,000원</p>
 				</div>
 				<div class="card">
 					<div class="cardimg">
-						<img src="../my-site/images/dotori.png" alt="도토리 5000개">
+						<img src="../my-site/images/10000do.png" alt="도토리 10000개">
 					</div>
-					<h3 class="card-title">도토리 5,000개</h3>
-					<p class="card-price">5,000원</p>
+					<h3 class="card-title">도토리 10,000개</h3>
+					<p class="card-price">10,000원</p>
 				</div>
 				<div class="card">
 					<div class="cardimg">
-						<img src="../my-site/images/dotori.png" alt="도토리 5000개">
+						<img src="../my-site/images/33000do.png" alt="도토리 33000개">
 					</div>
-					<h3 class="card-title">도토리 5,000개</h3>
-					<p class="card-price">5,000원</p>
+					<h3 class="card-title">도토리 33,000개</h3>
+					<div class="card-description">보너스 도토리 10% 추가!</div>
+					<p class="card-price">30,000원</p>
 				</div>
 				<div class="card">
 					<div class="cardimg">
-						<img src="../my-site/images/dotori.png" alt="도토리 5000개">
+						<img src="../my-site/images/56000do.png" alt="도토리 56000개">
 					</div>
-					<h3 class="card-title">도토리 5,000개</h3>
-					<p class="card-price">5,000원</p>
+					<h3 class="card-title">도토리 56,000개</h3>
+					<div class="card-description">보너스 도토리 12% 추가!</div>
+					<p class="card-price">50,000원</p>
 				</div>
 				<div class="card">
 					<div class="cardimg">
-						<img src="../my-site/images/dotori.png" alt="도토리 5000개">
+						<img src="../my-site/images/115000do.png" alt="도토리 115000개">
 					</div>
-					<h3 class="card-title">도토리 5,000개</h3>
-					<p class="card-price">5,000원</p>
+					<h3 class="card-title">도토리 115,000개</h3>
+					<div class="card-description">보너스 도토리 15% 추가!</div>
+					<p class="card-price">100,000원</p>
 				</div>
 			</div>
 		</section>
 		<section class="main-content">
-			<div class="main-title">
-				<h2>패키지</h2>
+			<div class="main-header">
+				<h2 class="main-title">패키지</h2>
+			</div>
+			<div class="products">
+				<div class="card">
+					<div class="cardimg">
+						<img src="../my-site/images/kits.png" alt="도구">
+					</div>
+					<h3 class="card-title">도구 패키지</h3>
+					<p class="card-price">50,000원</p>
+				</div>
+				<div class="card">
+					<div class="cardimg">
+						<img src="../my-site/images/ticket.png" alt="티켓">
+					</div>
+					<h3 class="card-title">티켓 패키지</h3>
+					<p class="card-price">50,000원</p>
+				</div>
 			</div>
 		</section>
 		<section class="main-content">
-			<div class="main-title">
-				<h2>시즌 패스</h2>
+			<div class="main-header">
+				<h2 class="main-title">시즌 패스</h2>
 			</div>
+			<h3 class="card-title">업데이트 준비 중....</h3>
+			<p class="card-price">해당 사항 없음</p>
 		</section>
 		<section class="main-content">
-			<div class="main-title">
-				<h2>이벤트</h2>
+			<div class="main-header">
+				<h2 class="main-title">이벤트</h2>
 			</div>
+			<h3 class="card-title">업데이트 준비 중....</h3>
+			<p class="card-price">해당 사항 없음</p>
 		</section>
 	</main>
-	<footer></footer>
+	<footer class="footer">
+		<section class="footer-container">
+			<div class="footer-main">
+				<p>동물농장</p>
+				<ul>
+					<li>m리스트</li>
+					<li>디스코드</li>
+					<li>서비스 이용 약관</li>
+					<li>개인정보 처리 방침</li>
+					<li></li>
+				</ul>
+			</div>
+			<div class="footer-copy">
+				<p class="copyright">ⓒ AnimalFarm All rights reserved</p>
+			</div>
+		</section>
+	</footer>
 </body>
+
 </html>
