--- a/css/grid_areas.html
+++ b/css/grid_areas.html
@@ -1,48 +1,126 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="ko">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>포털 레이아웃</title>
   <style>
+    body {
+      margin: 0;
+      font-family: system-ui, sans-serif;
+      padding: 20px;
+      display: flex;
+      justify-content: center;
+      background: #f8fafc;
+    }
+
+    .wrap {
+      width: 100%;
+      max-width: 1200px;
+    }
+
     .grid {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
       gap: 12px;
+      grid-template-areas:
+        "nav nav nav nav"
+        "hero hero promo promo"
+        "links feed feed ads"
+        "footer footer footer footer";
     }
 
     nav {
-
-      background-color: #111827;
+      grid-area: nav;
+      background: #111827;
       color: white;
-      padding: 8px;
+      padding: 12px;
       border-radius: 8px;
     }
 
     .hero {
-      background-color: #fde68a;
+      grid-area: hero;
+      background: #fde68a;
+      padding: 20px;
+      border-radius: 8px;
+      min-height: 160px;
+    }
+
+    .promo {
+      grid-area: promo;
+      background: #bfdbfe;
+      padding: 16px;
+      border-radius: 8px;
+      min-height: 160px;
+    }
+
+    .links {
+      grid-area: links;
+      background: white;
       padding: 12px;
       border-radius: 8px;
+      min-height: 240px;
+    }
+
+    .feed {
+      grid-area: feed;
+      background: white;
+      padding: 12px;
+      border-radius: 8px;
+      display: grid;
+      gap: 12px;
+      grid-template-columns: repeat(3, 1fr);
+    }
+
+    /* 중첩 그리드(카드 3열) */
+    .ads {
+      grid-area: ads;
+      background: #fef3c7;
+      padding: 12px;
+      border-radius: 8px;
+      min-height: 240px;
+    }
+
+    footer {
+      grid-area: footer;
+      background: #111827;
+      color: white;
+      padding: 12px;
+      border-radius: 8px;
+      text-align: center;
+    }
+
+    .card {
+      background: #60a5fa;
+      color: #042b4a;
+      padding: 24px;
+      border-radius: 6px;
+      text-align: center;
     }
   </style>
 </head>
 
 <body>
-  <div class="grid">
-    <Nav style="grid-column: 1 / 5;">네비게이션</Nav>
-    <div class="hero" style="grid-column: 1 / 3;">Hero</div>
-    <div class="promo" style="grid-column: 3 / 5;">Promo</div>
-    <section class="feed">
-      <div class="quick-links" style="grid-column: 1 / 2;">Quick Links</div>
-      <div class="card">피드1</div>
-      <div class="card">피드2</div>
-      <div class="card">피드3</div>
-      <div class="card">피드4</div>
-      <div class="card">피드5</div>
-      <div class="card">피드6</div>
-      <div class="ads" style="grid-column: 3 / 4;">광고 영역</div>
-    </section>
+  <div class="wrap">
+    <div class="grid">
+      <nav>네비게이션</nav>
+      <div class="hero">Hero (2열 병합)</div>
+      <div class="promo">Promo (2열 병합)</div>
+
+      <aside class="links">Quick Links</aside>
+      <section class="feed">
+        <div class="card">피드 1</div>
+        <div class="card">피드 2</div>
+        <div class="card">피드 3</div>
+        <div class="card">피드 4</div>
+        <div class="card">피드 5</div>
+        <div class="card">피드 6</div>
+      </section>
+      <aside class="ads">광고 영역</aside>
+
+      <footer>Footer - 포털 정보</footer>
+    </div>
   </div>
 </body>
 
