--- a/my-site/html_css_miniproject.html
+++ b/my-site/html_css_miniproject.html
@@ -141,7 +141,7 @@
 				</ul>
 			</div>
 			<div class="footer-copy">
-				<p class="copyright">ⓒ AnimalFarm All rights reserved</p>
+				<p class="copyright">&copy; AnimalFarm All rights reserved</p>
 			</div>
 		</section>
 	</footer>
